<resources>
    <string name="home_title">Freizeitpark Vechta</string>
    <string name="home_settings_menu_about">Über die App</string>

    <string name="home_card_to_few_cards_info">Hier werden demnächst weitere aktuelle und nützliche Infos angezeigt, schau doch mal wieder vorbei!</string>

    <string name="home_card_countdown_text">Bis zum Stoppelmarkt 2021 sind es noch</string>
    <plurals name="home_card_countdown_day">
        <item quantity="one">Tag</item>
        <item quantity="other">Tage</item>
        <item quantity="zero">Tage</item>
    </plurals>
    <plurals name="home_card_countdown_hour">
        <item quantity="one">Stunde</item>
        <item quantity="other">Stunden</item>
        <item quantity="zero">Stunden</item>
    </plurals>
    <plurals name="home_card_countdown_minute">
        <item quantity="one">Minute</item>
        <item quantity="other">Minuten</item>
        <item quantity="zero">Minuten</item>
    </plurals>
    <plurals name="home_card_countdown_second">
        <item quantity="one">Sekunde</item>
        <item quantity="other">Sekunden</item>
        <item quantity="zero">Sekunden</item>
    </plurals>

    <plurals name="home_card_firework_countdown_hours">
        <item quantity="one">In einer Stunde geht\'s los</item>
        <item quantity="other">In %1$d Stunden geht\'s los</item>
    </plurals>
    <plurals name="home_card_firework_countdown_minutes">
        <item quantity="one">In einer Minute geht\'s los</item>
        <item quantity="other">In %1$d Minuten geht\'s los</item>
    </plurals>
    <string name="home_card_firework_greeting">Viel Spaß auf dem Freizeitpark Vechta!</string>
    <string name="home_card_firework_description">Große Eröffnung am Donnerstag,\nFeuerwerk um 21 Uhr</string>


    <string name="home_card_freizeitpark_info">Informationen zum Freizeitpark Vechta</string>
    <string name="home_card_opening_hours_title">Öffnungszeiten</string>
    <string name="home_card_opening_hours_description"><![CDATA[10.09.2020 - 07.10.2020<br>donnerstags - sonntags<br>14:00 - 22:00 Uhr]]></string>
    <string name="home_card_price_title">Eintrittspreis</string>
    <string name="home_card_price_title_price">1€</string>
    <string name="home_card_regulations_title">Bitte beachte, dass auf dem gesamten Gelände des Freizeitpark Vechta folgende Regeln gelten:</string>
    <string name="home_card_regulations_distance">Abstand einhalten</string>
    <string name="home_card_regulations_mask">Wo kein Abstand einhaltbar ist:\nMund-Nasen-Schutz tragen</string>
    <string name="home_card_regulations_sanitizer">Nutze die ca. 50 Desinfektionsstellen auf dem Gelände</string>
    <string name="home_card_regulations_form"><![CDATA[Bitte fülle bereits im Voraus das <a href="https://www.schaustellerverein-vechta.de/templates/images/documents/95_1.pdf">Besucherformular</a> aus und bringe es mit.]]></string>
</resources>
