<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="?marginOtherElement"
    android:layout_marginTop="?marginOtherElement"
    android:layout_marginEnd="?marginOtherElement"
    android:layout_marginBottom="?marginOtherElement"
    android:elevation="?cardHighlightElevation"
    app:cardElevation="?cardHighlightElevation">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="?cardPadding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_card_freizeitpark_info"
            android:textAppearance="?textAppearanceHeadline6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?marginOtherElement"
            android:text="@string/home_card_opening_hours_title"
            android:textAppearance="?textAppearanceCaption" />

        <TextView
            android:id="@+id/openingHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?marginSameContent"
            android:textAppearance="?textAppearanceBody1"
            tools:text="@string/home_card_opening_hours_description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?marginOtherElement"
            android:text="@string/home_card_price_title"
            android:textAppearance="?textAppearanceCaption" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_card_price_title_price"
            android:textAppearance="?textAppearanceHeadline4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?marginOtherElement"
            android:layout_marginBottom="?marginSameContent"
            android:text="@string/home_card_regulations_title"
            android:textAppearance="?textAppearanceCaption" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="?marginOtherContent"
            android:drawableStart="@drawable/ic_distance_24"
            android:drawablePadding="?marginOtherContent"
            android:gravity="center_vertical"
            android:text="@string/home_card_regulations_distance"
            android:textAppearance="?textAppearanceBody1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="?marginOtherContent"
            android:drawableStart="@drawable/ic_masks_24"
            android:drawablePadding="?marginOtherContent"
            android:gravity="center_vertical"
            android:text="@string/home_card_regulations_mask"
            android:textAppearance="?textAppearanceBody1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="?marginOtherContent"
            android:drawableStart="@drawable/ic_clean_hands_24"
            android:drawablePadding="?marginOtherContent"
            android:gravity="center_vertical"
            android:text="@string/home_card_regulations_sanitizer"
            android:textAppearance="?textAppearanceBody1" />

        <TextView
            android:id="@+id/formLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?marginOtherContent"
            android:drawablePadding="?marginOtherContent"
            android:textAppearance="?textAppearanceBody1"
            tools:text="@string/home_card_regulations_form" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</com.google.android.material.card.MaterialCardView>